--- a/index.html
+++ b/index.html
@@ -7,22 +7,41 @@
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3fdd85f243.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header">
+    <div class="header">
         <div class="container">
             <div class="header__main">
-                <div class="header__main--info">
-                    <h1>Name: Nguyễn Văn Quân</h1>
-                    <h2>Age: 21</h2>
-                    <h2>Address: Mê Linh - Hà Nội</h2>
-                    <h2>Phone number: 0977290289</h2>
-                </div>
-                <div class="header__main--avatar">
-                    <img src="./images/avt.jpg" width="200">
+                <div class="header__main--banner">
+                    <div class="info">
+                        <div class="phone">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                            0977290289
+                        </div>
+                        <div class="address">
+                            <i class="fas fa-map-marker-alt"></i>
+                            Ha Noi
+                        </div>
+                    </div>
+                    <div class="name">
+                        <h1>Nguyễn Văn Quân</h1>
+                    </div>
+                    <div class="avatar">
+                        <img src="./images/avt.jpg" width="250">
+                    </div>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+    <main>
+        <div class="container">
+            <section class="target">
+
+            </section>
+        </div>
+    </main>
 </body>
 </html>
