--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,37 +12,91 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3fdd85f243.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class="header">
-        <div class="container">
-            <div class="header__main">
-                <div class="header__main--banner">
-                    <div class="info">
-                        <div class="phone">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                            0977290289
-                        </div>
-                        <div class="address">
-                            <i class="fas fa-map-marker-alt"></i>
-                            Ha Noi
-                        </div>
-                    </div>
-                    <div class="name">
+    <div class="container-fluid">
+        <div class="content">
+            <div class="left__content">
+                <div class="avatar">
+                    <img src="./images/avt.jpg" width="250px">
+                </div>
+                <div class="about">
+                    <h2>Thông tin cá nhân</h2>
+                    <br>
+                    <table class="table">
+                        <tr>
+                            <td>Ngày sinh</td>
+                            <td>: 13/3/2000</td>
+                        </tr>
+                        <tr>
+                            <td>Giới tính</td>
+                            <td>: Nam</td>
+                        </tr>
+                        <tr>
+                            <td>Điện thoại</td>
+                            <td>: 0977290289</td>
+                        </tr>
+                        <tr>
+                            <td>Email</td>
+                            <td>: quannv1320@gmail.com</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="education">
+                    <h2>Trình độ học vấn</h2>
+                    <br>
+                    <div class="row"><strong>Cao đẳng FPT Polytechnic</strong></div>
+                    <div class="row">Chuyên ngành: lập trình website</div>
+                    <div class="row">Tốt nghiệp loại khá</div>
+                </div>
+            </div>
+            <div class="right__content">
+                <div class="container">
+                    <div class="full__name">
                         <h1>Nguyễn Văn Quân</h1>
+                        <p>Web developer</p>
                     </div>
-                    <div class="avatar">
-                        <img src="./images/avt.jpg" width="250">
+                    <div class="target">
+                        <h1>Mục tiêu nghề nghiệp</h1>
+                        <div class="row">
+                            <h3>Mục tiêu ngắn hạn</h3>
+                            <p>- Tham gia thực tập tại các công ty để học thêm kỹ năng làm các dự án thực tế.</p>
+                            <p>- Sau thời gian thực tập sẽ trở thành nhân viên chính thức của công ty.</p>
+                            <p>- Nâng cao kỹ năng mềm của bản thân</p>
+                        </div>
+                        <div class="row">
+                            <h3>Mục tiêu dài hạn</h3>
+                            <p>- Nâng cao kỹ năng làm việc để trở thành một lập trình viên chuyên nghiệp.</p>
+                            <p>- Trở thành team leader của công ty và được làm các dự án lớn.</p>
+                        </div>
+                    </div>
+                    <div class="skills">
+                        <h1>Kỹ năng</h1>
+                        <div class="row">
+                            <h3>Kỹ năng chuyên ngành</h3>
+                            <p>- HTML / HTML5, CSS / CSS3 / SCSS</p>
+                            <p>- Bootstrap, Responsive</p>
+                            <p>- Javascript</p>
+                            <p>- PHP</p>
+                            <p>- Framework Laravel</p>
+                            <p>- SQL Server</p>
+                        </div>
+                        <div class="row">
+                            <h3>Kỹ năng mềm</h3>
+                            <p>- Kỹ năng giao tiếp khá, vui vẻ hòa đồng với mọi người.</p>
+                            <p>- Có kỹ năng làm việc nhóm khá, biết tiếp thu ý kiến từ người khác.</p>
+                            <p>- Chịu được áp lực và có trách nhiệm trong công việc.</p>
+                            <p>- Chăm chỉ, ham học hỏi.</p>
+                        </div>
+                        <div class="row">
+                            <h3>Kỹ năng văn phòng</h3>
+                            <p>- Biết sử dụng word, powerpoint, excel cơ bản</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <main>
-        <div class="container">
-            <section class="target">
-
-            </section>
-        </div>
-    </main>
 </body>
+
 </html>
