--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3fdd85f243.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" integrity="sha512-qWVvreMuH9i0DrugcOtifxdtZVBBL0X75r9YweXsdCHtXUidlctw7NXg5KVP3ITPtqZ2S575A0wFkvgS2anqSA==" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -92,6 +93,9 @@
                             <h3>Kỹ năng văn phòng</h3>
                             <p>- Biết sử dụng word, powerpoint, excel cơ bản</p>
                         </div>
+                    </div>
+                    <div class="projects">
+                        <h1>Các sản phẩm đã làm</h1>
                     </div>
                 </div>
             </div>
